--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.32",
     "@fortawesome/free-solid-svg-icons": "^5.15.1",
     "@fortawesome/react-fontawesome": "^0.1.12",
+    "@splidejs/react-splide": "^0.4.4",
+    "@splidejs/splide": "^2.4.21",
     "babel-loader": "^8.2.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
